united 2 while cycles